--- a/com.erikng.installapplications.template
+++ b/com.erikng.installapplications.template
@@ -20,7 +20,7 @@
 		<!-- <string>DEPNotifySkipStatus</string> -->
 		<string>Command: Image: /tmp/notebook-computer.png</string>
 		<string>Command: MainTitle: Securing your ThoughtWorks laptop!</string>
-		<string>Command: MainText: We're just setting up a few things to help secure your laptop, installing Anti-Virus, and enabling full disk encryption. \n We welcome your feedback on this process :) \n Get in touch - techops-support@thoughtworks.com</string>
+		<string>Command: MainText: We're just setting up a few things to help secure and register your laptop, including ensuring you have anti-virus installed, and full disk encryption enabled. \n We welcome your feedback on this process :) \n Get in touch - techops-support@thoughtworks.com</string>
 		<!-- <string>Command: WindowTitle: Welcome to your new ThoughtWorks laptop!</string> -->
 		<!-- <string>Command: NotificationOn:</string> -->
 		<!--<string>Command: Logout: Please restart now to start the disk encryption process.</string> -->
